<resources>
    <string name="app_name">Webspider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email Id</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">SIGNIN</string>
    <string name="register">REGISTER</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="loading">Please wait...</string>
    <string name="show">show</string>
    <string name="hide">Hide</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="donthaveaccount">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="verification_text">We need to text to you a confirmation code to get started.</string>
    <string name="why">Why?</string>
    <string name="prompt_phonenumer">Phone Number</string>
    <string name="sentotp">SEND OTP</string>
    <string name="resendotp">Resend OTP</string>
    <string name="prompt_enterotp">Enter OTP</string>
    <string name="login">LOGIN</string>
    <string name="signup_caps">SIGNUP</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="addtowishlist">Add to wishlist</string>
    <string name="removefromwishlist">Remove from wishlist</string>
    <string name="totalviews">Total Views :</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="contactperson">Contact Person</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="address">1st Floor , Moti Nagar, Karmik Nagar, Dhanbad</string>
    <string name="websitelink">http://www.websspider.com/</string>
    <string name="emaillink">support@websspider.com</string>
    <string name="contactus">CONTACT US</string>
    <string name="home">HOME</string>
    <string name="aboutus">ABOUT US</string>
    <string name="bachao">BACHAO</string>
    <string name="alreadyaccount">Already have an account?</string>
    <string name="login_small">Login</string>
    <string name="aboutwebspider">ABOUT WEBSPIDER</string>
    <string name="aboutus_lontext">“WEB SPIDER has every small town solutions.” A WEB SPIDER Helps in bridging the gap between buyers and sellers by providing relevant information.WEB SPIDER helps not only Search, but you can get instant information about shops and services around you. Search Anything, Anywhere, Anytime by using WEB SPIDER. Here in WEB SPIDER you get Phone Numbers, email, Addresses, Deals, Discount, Reviews, portfolio, and works as a one stop solution for all your daily needs. No more planning, just search, get up and go - Easily pick shops and services by category or locations. Buyers and sellers meat together in WEB SPIDER.</string>
    <string name="rate">Rate</string>
    <string name="vendorname">Vendor Shop Name</string>
    <string name="typevendorname">Type vendor name</string>
    <string name="vendorcontactpersonname">Vendorcontact person name</string>
    <string name="typevendorcontactpersonname">Type vendor contact person name</string>
    <string name="vendorpersoncontactnumber">Vendor contact number</string>
    <string name="vendoremail">Vendor email</string>
    <string name="vendorwebsiteurllink">Vendor website email eg:- (http://www.websspider.com/)</string>
    <string name="vendorwebsiteurl">Vendor website email </string>
    <string name="vendorlocation">Vendor shop location</string>
    <string name="vendordetails">Vendor Details</string>
    <string name="productdetails">Product Details</string>
    <string name="productname">Product name</string>
    <string name="producsortdesc">Product short description</string>
    <string name="produclondesc">Product long description</string>
    <string name="coupancodename">Coupan code</string>
    <string name="typeselectcategory">Type/Select Category</string>
    <string name="loading_location">getting location, please wait</string>
    <string name="submitvendordetails">Submit Vendor Details</string>
    <string name="logout">Logout</string>
    <string name="logout_big">LOGOUT</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="myprofile">MY PROFILE</string>
    <string name="update">UPDATE</string>
    <string name="loginType">Logintype</string>
    <string name="gplus">gplus</string>
    <string name="yes">Yes</string>
    <string name="is_signin">issign</string>
    <string name="no">No</string>
    <string name="linked">linked</string>
    <string name="normal">Normal</string>
    <string name="facebook_app_id">1298961933559690</string>
    <string name="fb_login_protocol_scheme">fb1298961933559690</string>
    <string name="fb">fb</string>
    <string name="social">social</string>
    <string name="chooselocation">Choose Your Location</string>
    <string name="popularcity">Popular Cities</string>
    <string name="serach">Serach</string>
    <string name="flight">Flights</string>
    <string name="milionome">My Holidays</string>
    <string name="rblindia">Recharge</string>
    <string name="hotdeals">Hot Deals</string>
    <string name="popularcities">Popular Cities</string>
    <string name="aboutus_content"><![CDATA[Web Spider is one of the fastest growing Classified Company, which is based Dhanbad very soon we were in across India. The Company assists the Business Enterprises under all the categories in their business promotion by publishing their Classifieds & Hot Deals on its website. In this way, Web Spider also meets the needs of the local residents and those outsiders who come for a short stay or to settle down for a long. The Company provides Local Search Engine (City wise). It helps the users in finding out the suppliers of the products and services that meet their needs. The website also helps the business entities that are looking forward to give a boost to their business by way of lead generation. The portal of the Company works as a platform for the customers/consumers and the suppliers enabling them to connect to each other and arrive at deals. Since its inception, a fairly large number of business entities have benefited a lot and seen a tremendous growth in their business by listing on the website of Web Spider, www.websspider.com. Today; it is not only one of the fastest blooming but also amongst largest classified portals in India.  The Company is managed by the well qualified Board of Directors who is highly dedicated to the welfare cause of the society. The Company has on its rolls, a team of talented & highly skilled IT professionals with several years of experience in client servicing.  Its website, the online advertisement platform of the Company is highly Responsive and a Mobile website. It\'s also available in Mobile Application Mode which can be downloaded on all the Smart Phones.  On the platter of this highly beneficial and unique web application, we offer pocket-friendly offers and packages. With a wide array of services it offers, the company also posts irresistible deals. Besides listing classifieds, the Company also publishes attractive HOT DEALS and Coupons offered by the business enterprises under the categories of Food & Drink, Entertainment, Salon & Spa, Fitness & Hobby, Hotel & Travel, Health & Doctor, Service Deals, Product Deals, Education and Real Estate etc. Our Hot Deals segment not only helps these specially categorized entities grow speedily, but also build a long-lasting relationship with their customers.  Web Spider always endeavours to provide its valued customers with a high quality of service. Besides the online advertisement, the Company also brings out The Web Spider, a Hand Book of Coupons of Hot Deals. This Hand Book is published in Cities Wise Editions and goes a long way in building lasting B2C relations and sustainable business growth of the advertisers.  We can also be categorized as a business directory which provides to the customers, the classified information about sourcing numerous products and services. This online marketplace also provides B2C & B2B (local level business-to-business transactions) platforms to the SMEs, businessmen and to the customers who are looking for various options available to them in a particular product which they would like to buy. The company plans to diversify its business activities and will be very soon, entering into the line of various online bookings and deals as well.  As the name suggests, it attracts Web Spider of people who wish to buy, sell or avail the services of the professionals like Doctors, Architects, Engineers, CAs , Lawyers,  and someone who is looking for a Hotel for a short stay or accommodation to rent. In short, it is one of the largest portals not only for businessmen, SMEs, but also for the individuals where one can source, sell or get needed products, services and information.  We stand out among the countless mobile applications. Owing to our specialized services which we offer in the areas of Hotel & Tourism, Franchises, Real Estate, Education, Healthcare, Medicine, the venue for various occasions and many other sectors, we provide information on almost everything which is just a click away from the consumers.  Vision  We believe in making the life of our clients and users easy in todays fast pace. To provide all services to the users under one umbrella is what we focus on. We are constantly improving and working on providing the best service to our users. We intend to make a significant contribution in transforming their lifestyle a smart one from the traditional way of shopping and acquiring. We believe in deep and stable collaborations for achieving long-term goals as we are here to build relationships with our users.  Mission:   The genesis of our company starts with our mission. We aim to spread optimism, create the value of people & time and to simplify things in the existing complex lifestyle. The mission is simple, i.e. to connect the people who could be useful and beneficial to each other.]]></string>
</resources>