<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="apextechies.etodo.activity.MainActivity"
    tools:showIn="@layout/app_bar_main"
    >

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:paddingBottom="@dimen/margin_60" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/flightlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/flight"
            android:gravity="center"
            android:textSize="@dimen/text_12"
            android:textColor="@color/bottom_text_color"
            android:drawableTop="@mipmap/flight"/>
        <TextView
            android:id="@+id/myholidaylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/milionome"
            android:gravity="center"
            android:textSize="@dimen/text_12"
            android:textColor="@color/bottom_text_color"
            android:drawableTop="@mipmap/myholiday"/>
        <TextView
            android:id="@+id/rechargelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/rblindia"
            android:gravity="center"
            android:textSize="@dimen/text_12"
            android:textColor="@color/bottom_text_color"
            android:drawableTop="@mipmap/rec"/>

        <TextView
            android:id="@+id/hotdeallayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/hotdeals"
            android:gravity="center"
            android:textSize="@dimen/text_12"
            android:textColor="@color/bottom_text_color"
            android:drawableTop="@mipmap/deals"/>
    </LinearLayout>
</RelativeLayout>
