<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/app_bg"
    tools:context="apextechies.etodo.login.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_64"
        android:background="@mipmap/yellow_bar"
        android:text="@string/signup_caps"
        android:textSize="@dimen/text_15"
        android:textColor="@color/white"
        android:gravity="center"/>
    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/otp"
    android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:textColor="@color/textcolor_black"
            android:text="@string/verification_text"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/hideshowpassword">

                <EditText
                    android:id="@+id/phonenumer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phonenumer"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/why"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/why"
                android:textSize="@dimen/text_13"
                android:textStyle="normal"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:padding="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/enterotplayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_enterotp"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/resendotp"
                android:textSize="@dimen/text_13"
                android:textStyle="normal"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:padding="5dp"/>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/otplayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_box"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_30">
        <TextView
            android:id="@+id/send_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sentotp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/margin_12"
            android:textColor="@color/white"
           />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/right_arrow"
                android:id="@+id/imageView3"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
